5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1888_1595.log
== TEST (2019-07-09 16:03:11) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

vetor= vetor - min(vetor)
soma=0
for i in range(size(vetor)):
	soma=soma+vetor[i]
	
media=soma/size(vetor)	
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:04:32) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor))
		soma=soma
	else:
		
		soma=soma+vetor[i]
	
media=soma/size(vetor)	
print(round(media, 2))
-- ERROR:
File "XXXX", line 8
    if(vetor[i]==min(vetor))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:04:40) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
	else:
		
		soma=soma+vetor[i]
	
media=soma/size(vetor)	
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:05:24) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

alunos=size(vetor)-1
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
	else:
		
		soma=soma+vetor[i]
	
media=soma/salunos	
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:05:34) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

alunos=size(vetor)-1
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
	else:
		
		soma=soma+vetor[i]
	
media=soma/alunos	
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:05:40) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

alunos=size(vetor)-1
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
	else:
		
		soma=soma+vetor[i]
	
media=soma/alunos	
print(round(media, 2))
-- EXECUTION TIME:
0.846663
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:05:57) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

alunos=size(vetor)-1
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
	else:
		
		soma=soma+vetor[i]
	
media=soma/alunos	
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:06:19) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

alunos=size(vetor)-1
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
	else:
		
		soma=soma+vetor[i]
	
media=soma/alunos	
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:06:56) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

alunos=size(vetor)-1
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
	else:
		
		soma=soma+vetor[i]
	
media=soma/alunos	
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:07:17) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

alunos=size(vetor)-1
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
	else:
		
		soma=soma+vetor[i]
	
media=soma/alunos	
print(round(media, 2))
-- EXECUTION TIME:
0.833116
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:07:42) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

alunos=size(vetor)-1
soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/alunos	
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:07:56) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

alunos=size(vetor)-1
soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/alunos	
print(round(media, 2))
-- EXECUTION TIME:
0.853891
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:08:24) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/size(vetor)-1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:08:39) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:08:48) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
1.16958
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:09:00) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
2.44362
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
Vetor de notas: 0.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:09:01) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
2.16403
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
Vetor de notas: 3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
Vetor de notas: 0.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:09:01) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
4.19963
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
Vetor de notas: 0.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:09:08) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))



for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
0.898334
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1595/main.py", line 9, in <module>
    soma=soma+vetor[i]
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:09:48) 
-- CODE:
from numpy import *

vetor=array(eval(float(input("Vetor de notas: "))))



for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:10:15) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))



for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
0.906327
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1595/main.py", line 9, in <module>
    soma=soma+vetor[i]
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:10:17) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))



for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:10:18) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))



for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
1.03772
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1595/main.py", line 9, in <module>
    soma=soma+vetor[i]
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:10:34) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	
media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:11:20) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

i=0
soma=0
while(i<size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	i=i+1
media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:11:27) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

i=0
soma=0
while(i<size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma
	i=i+1
media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
0.879884
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:13:09) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma

media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
1.08168
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
Vetor de notas: 2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
Vetor de notas: 3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
Vetor de notas: 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:25:28) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma

media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:18) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma

media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:26:56) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma

media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
0.927597
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:27:28) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma

	media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:27:39) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma

	media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
0.797018
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:24) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	else:
		
		soma=soma

media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:34:02) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]!=min(vetor)):
		soma=soma+vetor[i]
	
		
		

media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:33) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor):
		soma=soma
	else:
		soma=soma+vet[i]
		
		

media=soma/(size(vetor))-1
print(round(media, 2))
-- ERROR:
File "XXXX", line 8
    if(vetor[i]==min(vetor):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:51) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
	else:
		soma=soma+vet[i]
		
		

media=soma/(size(vetor))-1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:59) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
	else:
		soma=soma+vetor[i]
		
		

media=soma/(size(vetor))-1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:27) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))


soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
	else:
		soma=soma+vetor[i]
		
		

media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:50) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

a=0
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
		a=a+1
	else:
		soma=soma+vetor[i]
		
		

media=soma/(size(vetor)-a)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:04) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

a=0
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
		a=a+1
	else:
		soma=soma+vetor[i]
		
		

media=soma/(size(vetor)-a)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:42:18) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

a=0
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
		a=a+1
	else:
		soma=soma+vetor[i]
		
		

media=soma/(size(vetor)-a)
print(round(media, 2))
-- EXECUTION TIME:
0.978987
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:21) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

a=0
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
		a=a+1
	else:
		soma=soma+vetor[i]
		
		

media=soma/(size(vetor)-a)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:10) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))

a=0
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
		a=a+1
	else:
		soma=soma+vetor[i]
		
		

media=soma/(size(vetor)-a)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:50) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))
b=size(vetor)
a=0
soma=0
for i in range(size(vetor)):
	if(vetor[i]==min(vetor)):
		soma=soma
		a=a+1
	else:
		soma=soma+vetor[i]
		
		

media=soma/(b-a)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:16) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))
b=size(vetor)
a=0
soma=0
for i in range(size(vetor)):
	
	if(vetor[i]==min(vetor)and(a<1)):
		a=a+1
	else:
		soma=soma+vetor[i]
		
		

media=soma/(size(vetor)-1)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:48:26) 
-- CODE:
from numpy import *

vetor=array(eval(input("Vetor de notas: ")))
b=size(vetor)
a=0
soma=0
for i in range(size(vetor)):
	
	if(vetor[i]==min(vetor)and(a<1)):
		a=a+1
	else:
		soma=soma+vetor[i]
		
		

media=soma/(size(vetor)-1)
print(round(media, 2))
-- EXECUTION TIME:
0.798044
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
